# omprtf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  build.sh
.cache/clangd/index/: cmeta.c.A4822FBE3E2425D1.idx  cmeta.cpp.FC91CBBD4308F0D2.idx  cmeta.h.3A92B798D07E2973.idx  logging.c.AC6A864EF26CA163.idx  logging.h.E55D78CCA768234E.idx  main.c.622CBBBFC070E307.idx
docker/cuda-docker-image/: Dockerfile
eval/: CMakeLists.txt
eval/basic/: CMakeLists.txt  Makefile  main.c  main.ll
eval/basic-ngpu/: CMakeLists.txt  main.c
eval/duplicate/: CMakeLists.txt  main.c
src/cmeta/: CMakeLists.txt  cmeta.cpp  cmeta.h  main.c
src/logging/: CMakeLists.txt  logging.c  logging.h
src/meta_pass/: pass.cpp
src/mreader/: CMakeLists.txt  getfileinfo.cpp  getfileinfo.h  getlineinfo.cpp  getlineinfo.h  getlineinfo.hpp  tool.c  tool.cpp
src/omprtf/: CMakeLists.txt  main.cpp
src/opt_pass/: CMakeLists.txt  Makefile  pass.cpp  pass.hpp  run.sh.in
src/profiler/: CMakeLists.txt  CMakeLists.txt.bak
src/profiler/src/: analyze.cc  analyze.hh  main.cc  preload.cc  preload.hh  symbolizer.cc  symbolizer.hh
